Upgraded project to spring-boot-starter-parent version 3.0.1 Entities got Long ids instead of ints Added @Value lombok annotation to DTO's for even less code duplication Added custom repositories for Lesson and Course for advanced querries In SQL the ids are now BIGINT and VARCHARS now have max 255 characters Created ClassScheduleService.java